Kubernetes/Infrastructure/Keycloak/keycloak-deploy.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: keycloak
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-ca-issuer
    cert-manager.io/common-name: iam.homelab.kbushby.com
spec:
  ingressClassName: nginx
  rules:
  - host: iam.homelab.kbushby.com
    http:
      paths:
      - backend:
          service:
            name: keycloak-service
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - iam.homelab.kbushby.com
    secretName: keycloak-tls
